--- a/init/Kconfig
+++ b/init/Kconfig
@@ -2052,6 +2052,11 @@ config PROFILING
 config TRACEPOINTS
 	bool
 
+config EXMEM
+	bool "ExMem Support"
+	help
+	  Introduce SMDK memory partition - ZONE_EXMEM, grouping, and interleaving CXL Memory
+
 endmenu		# General setup
 
 source "arch/Kconfig"
